Added Javadoc to most documents coming back later to check on them again some didnt work